--- a/responsive.css
+++ b/responsive.css
@@ -46,7 +46,9 @@
         .bt3 {
             margin-top: 2%;
             width: 40%;
+           
 
+            
         }
         .portfolio_img{
             padding-top: 1.5%;
@@ -90,8 +92,8 @@
                 font-size: 1rem;
                 font-weight: 600;
                 padding-top: 4%;
+                text-decoration: none;
                 color: var(--t-color);
-                 text-decoration: none;
             }
 
             .footer {
@@ -143,6 +145,9 @@
     }
     .logo{
         padding-top: 3%;
+    }
+    .skill_icon{
+        gap:25%;
     }
     .main {
         width: 98vw;
@@ -337,6 +342,12 @@
         font-size: 12px;
         padding-top: 1%;
     }
+    
+
+    .bt3 {
+        margin-top: 2%;
+        width: 40%;
+    }    
     .menu {
        
         display: none;
@@ -402,15 +413,21 @@
 
 
 
-@media screen and (max-width: 426px) and (max-height: 700px) {
+@media screen and (max-width: 426px) and (max-height: 750px) {
 .thanks{
     padding-top: 50%;
+}
+.bt{
+    width: 50%;
 }
 h1{
     font-size: 2.5rem;
     color: var(--t-color);
     padding-top: 2%;
     padding-bottom: 2%;
+}
+.skill_icon{
+    gap:25%;
 }
 h2{
     font-size: 1.3rem;
@@ -446,7 +463,7 @@ h3{
 padding-left: 0%;
 padding-right: 0%;
     padding-bottom: 5%;
-    padding-top: 12%;
+    padding-top: 26%;
     background: var(--bg-color);
     flex-direction: column-reverse;
 }
@@ -455,6 +472,11 @@ padding-right: 0%;
 }
 .main_img{
     padding-left: 18%;
+}
+
+.bt3 {
+    margin-top: 2%;
+    width: 40%;
 }
 .text {
     width: 92vw;
@@ -696,8 +718,13 @@ display: none;
 
 
 
-@media screen and (max-width: 380px) and (max-height: 700px) {
-
+@media screen and (max-width: 380px) and (max-height: 750px) {
+    .skill_icon{
+        gap:25%;
+    }
+    .bt{
+        width: 50%;
+    }
     h1{
         font-size: 2.3rem;
         color: var(--t-color);
@@ -717,6 +744,12 @@ display: none;
         padding-top: 2%;
         padding-bottom: 2%;
         font-weight: 500;
+    }
+
+    
+    .bt3 {
+        margin-top: 2%;
+        width: 40%;
     }
     .nav {
         width: 98vw;
@@ -738,7 +771,7 @@ display: none;
     padding-left: 0%;
     padding-right: 0%;
         padding-bottom: 5%;
-        padding-top: 22%;
+        padding-top: 34%;
         background: var(--bg-color);
         flex-direction: column-reverse;
     }
@@ -940,8 +973,10 @@ display: none;
     }
 
     
-@media screen and (max-width: 325px) and (max-height: 700px) {
-
+@media screen and (max-width: 325px) and (max-height: 750px) {
+    .bt{
+        width: 50%;
+    }
     h1{
         font-size: 2rem;
         color: var(--t-color);
@@ -962,6 +997,9 @@ display: none;
         padding-bottom: 2%;
         font-weight: 500;
     }
+    .skill_icon{
+        gap:25%;
+    }
     .nav {
         width: 98vw;
         display: flex;
@@ -972,6 +1010,11 @@ display: none;
         background: var(--bg-color);
         box-shadow: 0 5px 15px rgba(0,0,0,0.06);
     }
+    
+    .bt3 {
+        margin-top: 2%;
+        width: 40%;
+    }
     .main {
         width: 98vw;
         display: flex;
@@ -979,7 +1022,7 @@ display: none;
     padding-left: 0%;
     padding-right: 0%;
         padding-bottom: 5%;
-        padding-top: 28%;
+        padding-top: 36%;
         background: var(--bg-color);
         flex-direction: column-reverse;
     }
@@ -1152,7 +1195,6 @@ display: none;
     }
     .contact_text p {
         font-size: .8rem;
-         text-decoration: none;
     }
     .contact_text p i {
         font-size: 1rem;
